--- a/doc/open-api/price.yml
+++ b/doc/open-api/price.yml
@@ -77,7 +77,7 @@ components:
       in: query
       name: date
       required: true
-      description: "Date"
+      description: "ISO-8601 Date"
       schema:
         type: string
         format: date-time
@@ -109,6 +109,9 @@ components:
       type: object
       description: "Applicable price"
       properties:
+        id:
+          type: integer
+          example: 1
         product_id:
           type: integer
           example: 35455
@@ -123,9 +126,6 @@ components:
           type: string
           format: date-time
           example: "2020-12-31T23:59:59+01:00"
-        price_rate_id:
-          type: integer
-          example: 1
         price:
           type: number
           example: 35.5
